--- a/client/templates/components/nav/nav.html
+++ b/client/templates/components/nav/nav.html
@@ -12,8 +12,7 @@
         </div>
 
         <div class="nav-group right">
-            {{#if ownPost}}
-            <a class="nav-item js-edit"><span class="icon-edit"></span></a> {{/if}} {{> Template.contentBlock }}
+            {{> Template.contentBlock }}
         </div>
     </nav>
 </template>
