--- a/client/templates/post-controller/post-edit/post-edit.html
+++ b/client/templates/post-controller/post-edit/post-edit.html
@@ -29,6 +29,6 @@
                 <!--<a class="btn btn-danger delete" href="#">Delete post</a>-->
             </form>
         </div>
-        <a class="btn btn-block btn-primary save" href="javascript:;">保存</a>
+        <a class="btn btn-block btn-primary js-save" href="javascript:;">保存</a>
     </div>
 </template>
