--- a/client/sass/components/_overlay.scss
+++ b/client/sass/components/_overlay.scss
@@ -21,6 +21,26 @@
     top: 0;
     width: auto;
     z-index: 1;
+    .title-page {
+        bottom: auto;
+        font-family: "微软雅黑";
+        font-size: 12px;
+        font-style: normal;
+        height: 4.5rem;
+        left: 0;
+        letter-spacing: 0.3em;
+        line-height: 4.5rem;
+        overflow: hidden;
+        position: absolute;
+        right: 0;
+        text-align: center;
+        text-indent: 0.3em;
+        text-overflow: ellipsis;
+        text-transform: uppercase;
+        top: 0;
+        white-space: nowrap;
+        width: auto;
+    }
     .overlay-back,
     .overlay-dismiss {
         bottom: auto;
@@ -77,6 +97,109 @@
     .overlay-hook {
         &.auth-open {
             @include transform( translate3d(0px, 0px, 0px));
+        }
+    }
+    &.share {
+        .wrapper-camera {
+            bottom: 0;
+            height: auto;
+            left: 0;
+            position: absolute;
+            right: 0;
+            text-align: center;
+            top: auto;
+            width: 100%;
+            .btn-camera {
+                margin-bottom: 0.75rem;
+            }
+            .subtext-camera {
+                color: #aaaaaa;
+                font-size: 12px;
+                line-height: 18px;
+                margin-bottom: 1rem;
+            }
+        }
+        .bg-image {
+            height: 50%;
+            margin-top: 4.5rem;
+            position: relative;
+        }
+        .form-share {
+            background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.9), #ffffff 10%, white 100%);
+            bottom: 0;
+            height: auto;
+            left: 0;
+            min-height: 50%;
+            padding-bottom: 3rem;
+            position: absolute;
+            right: 0;
+            top: auto;
+            transform: translate3d(0px, 0px, 0px);
+            width: 100%;
+            .wrapper-checkbox {
+                border-bottom: 1px solid #eeeeee;
+                border-top: 1px solid #eeeeee;
+                bottom: 3rem;
+                height: 3rem;
+                left: auto;
+                position: absolute;
+                right: auto;
+                top: auto;
+                width: 100%;
+                .checkbox {
+                    padding: 1rem;
+                }
+            }
+            .form-group {
+                display: flex;
+                flex-wrap: wrap;
+                margin-bottom: 3rem;
+                .avatar,
+                .message-share {
+                    -moz-box-flex: 1;
+                    flex: 1 1 0;
+                }
+                .message-share {
+                    width: 100%;
+                    height: 12em;
+                    resize: none;
+                }
+                .avatar {
+                    float: left;
+                    height: 2.5rem;
+                    margin-left: 1rem;
+                    margin-top: 1rem;
+                    max-width: 2.5rem;
+                    width: 2.5rem;
+                }
+            }
+            .wrapper-checkbox {
+                border-bottom: 1px solid #eeeeee;
+                border-top: 1px solid #eeeeee;
+                bottom: 4.5rem;
+                height: 4.5rem;
+                left: auto;
+                position: absolute;
+                right: auto;
+                top: auto;
+                width: 100%;
+                .checkbox {
+                    padding-left: 1rem;
+                    padding-right: 1rem;
+                    padding-top: 1.7rem;
+                    padding-bottom: 1.7rem;
+                    clear: both;
+                    color: #aaaaaa;
+                    cursor: pointer;
+                    display: block;
+                    font-family: "微软雅黑";
+                    font-size: 1.4rem;
+                    font-weight: 100;
+                    line-height: 1.1rem !important;
+                    min-height: 1.1rem;
+                    position: relative;
+                }
+            }
         }
     }
 }
