--- a/client/sass/global/_base.scss
+++ b/client/sass/global/_base.scss
@@ -40,3 +40,17 @@ ul,li {
 .pd15 {
     padding: 1.5rem;
 }
+
+input[type="text"], textarea {
+    background: transparent none repeat scroll 0 0;
+    border: medium none;
+    border-radius: 0;
+    box-sizing: border-box;
+    color: #333333;
+    font-family: "微软雅黑";
+    font-size: 14px;
+    font-style: normal;
+    line-height: 1.5em !important;
+    outline: medium none;
+    padding: 1rem 1.25rem;
+}
