--- a/client/templates/auth/register/register.html
+++ b/client/templates/auth/register/register.html
@@ -21,7 +21,7 @@
                 <form name="registerForm">
                     <div class="form-group">
                         <label class="control-label opt5">全名</label>
-                        <input id="username" type="text" name="username" class="form-control">
+                        <input id="name" type="text" name="name" class="form-control">
                     </div>
                     <div class="form-group">
                         <label class="control-label opt5">邮箱</label>
