--- a/client/templates/post-controller/post-add/post-add.html
+++ b/client/templates/post-controller/post-add/post-add.html
@@ -13,7 +13,7 @@
             </div>
         </nav>
         <div class="content-scrollable">
-            <form id="postAdd" name="postAdd" class="js-add-post">
+            <form id="postAdd" name="postAdd" class="js-add-post form-panel pd15">
                 <div class="form-group {{errorClass 'url'}}">
                     <label class="control-label" for="url">URL</label>
                     <div class="controls">
@@ -28,9 +28,8 @@
                         <span class="help-block">{{errorMessage 'title'}}</span>
                     </div>
                 </div>
-                <input type="submit" value="Submit" class="btn btn-primary" />
             </form>
         </div>
-        <a class="btn btn-block btn-primary js-open" href="javascript:;">创建新帖子</a>
+        <a class="btn btn-block btn-primary js-add" href="javascript:;">创建新帖子</a>
     </div>
 </template>
