--- a/client/templates/post-details/post-details.html
+++ b/client/templates/post-details/post-details.html
@@ -1,14 +1,14 @@
 <template name="postDetails">
     <div class="page post-details {{activeTabClass}}" style="transform: translateX(0px);">
         {{#nav title='Recipe' black=true isback=true}} {{#if isOwen}}
-        <a class="nav-item js-edit" href="#"><span class="icon-eidt"></span></a> {{else}} {{#if bookmarked}}
+        <a class="nav-item" href="{{pathFor 'postEdit'}}"><span class="icon-edit"></span></a> {{else}} {{#if bookmarked}}
         <a href="#" class="nav-item js-remove-bookmark bookmarked"><span class="icon-star"></span></a> {{else}}
         <a href="#" class="nav-item js-add-bookmark"><span class="icon-star-hollow"></span></a> {{/if}} {{/if}} {{/nav}}
 
         <div class="bg-image" style="background-image: url('/images/recipes/640x800/summer-apricots-honey-panna-cotta.jpg')"></div>
 
         <div class="attribution-title js-uncollapse">
-            <h1 class="title-recipe">{{title}}</h1>
+            <h1 class="title">{{title}}</h1>
             <div class="metadata-wrapper">
                 <p class="description">Juicy, fragrant, perfectly textured for a little fire action</p>
                 <span class="source">Tartelette</span>
@@ -17,16 +17,16 @@
 
             <div class="btns-group pure-g">
                 <div class="pure-u-1-2">
-                    <a class="btn btn-secondary btn-block js-show-order">关注</a>
+                    <a class="btn btn-secondary btn-block {{#if isActiveTab 'make'}}active{{/if}} {{#if isActiveTab 'recipe'}}no-state{{/if}} js-show-order">关注</a>
                 </div>
                 <div class="pure-u-1-2">
-                    <a class="btn btn-secondary btn-block js-show-order">评论</a>
+                    <a class="btn btn-secondary btn-block {{#if isActiveTab 'make'}}active{{/if}} {{#if isActiveTab 'recipe'}}no-state{{/if}} js-show-comment">评论</a>
                 </div>
             </div>
         </div>
 
 
-        <div class="content-scrollable static-nav make-scrollable">
+        <div class="content-scrollable static-nav order-scrollable">
             <a class="btn-tertiary js-share"><span class="icon-camera"></span> Share that you made this</a>
 
             <h2 class="list-title">Ingredients</h2>
@@ -63,11 +63,10 @@
                     ...
                 </li>
             </ol>
-            <a href="http://www.tarteletteblog.com/2011/07/recipe-gluten-free-apricots-honey-panna.html" target="_blank" class="btn-primary js-open">See full recipe on Tartelette</a>
+            <a href="http://www.tarteletteblog.com/2011/07/recipe-gluten-free-apricots-honey-panna.html" target="_blank" class="btn btn-block btn-primary js-open">See full recipe on Tartelette</a>
         </div>
 
-        <div class="content-scrollable static-nav feed-scrollable delayed">
-            <a class="btn-tertiary js-share"><span class="icon-camera"></span> 添加评价</a>
+        <div class="content-scrollable static-nav comment-scrollable">
             <div class="list-activities">
                 {{#each activities}}
                     {{> activity}}
@@ -78,6 +77,7 @@
                 </div>
                 {{/each}}
             </div>
+            <a class="btn btn-block btn-primary js-add-comment"><span class="icon-camera"></span> 添加评价</a>
         </div>
     </div>
 </template>
