--- a/client/templates/post-details/post-details.html
+++ b/client/templates/post-details/post-details.html
@@ -77,7 +77,7 @@
                 </div>
                 {{/each}}
             </div>
-            <a class="btn btn-block btn-primary js-add-comment"><span class="icon-camera"></span> 添加评价</a>
+            <a class="btn btn-block btn-primary js-share"><span class="icon-camera"></span> 添加评价</a>
         </div>
     </div>
 </template>
