--- a/client/templates/activitys/activity.html
+++ b/client/templates/activitys/activity.html
@@ -6,7 +6,7 @@
         <img src="{{userAvatar}}" class="image-avatar">
       </span>
       <span class="meta">
-        <span class="author">{{firstName}}</span> made <span class="recipe">{{postTitle}}</span>: {{text}}
+        <span class="author">{{userName}}</span> made <span class="recipe">{{postTitle}}</span>: {{text}}
        {{#if place}}<span class="location">&mdash;{{place}}</span>{{/if}}
        </span>
     </span>
