--- a/client/templates/auth/setting/settings.html
+++ b/client/templates/auth/setting/settings.html
@@ -1,23 +1,23 @@
-<template name="register">
+<template name="settings">
     <div class="page register">
-        {{>nav title='用户注册' isback=true}}
+        {{#nav title='用户设置' isback=true}}
+        <a href="#" class="nav-item"><span class="icon-logout">退出</span></a> {{/nav}}
         <div class="content-scrollable">
-            <div class="bg-image login">
+            <div class="bg-image setting">
                 <h1 class="title">
-                    <img alt="Local Market" src="/images/loginBg.png">
+                    <img alt="user-avatar" src="{{avatar}}">
                 </h1>
                 <span class="hours"></span>
             </div>
             <div class="sign-panel pd15">
-                <form name="registerForm">
-                   <input class="upload-avatar" id="uploadAvatar" type="file">
+                <form name="settingsForm">
                     <div class="form-group">
                         <label class="control-label opt5">全名</label>
-                        <input id="name" type="text" name="name" class="form-control">
+                        <input id="name" type="text" value="{{userName}}" name="name" class="form-control">
                     </div>
                     <div class="form-group">
                         <label class="control-label opt5">邮箱</label>
-                        <input id="email" type="email" name="email" class="form-control">
+                        <input id="email" type="email" value="{{userMail}}" name="email" class="form-control">
                     </div>
                     <div class="form-group">
                         <label class="control-label opt5">密码</label>
@@ -27,14 +27,8 @@
                         <label class="control-label opt5">生日</label>
                         <input id="birthday" type="date" name="birthday" class="form-control">
                     </div>
-                    <button class="btn btn-nearby btn-block" type="submit">注册</button>
+                    <button class="btn btn-nearby btn-block" type="submit">保存</button>
                 </form>
-            </div>
-            <div class="bottom-info pd15">
-                <div class="pure-g">
-                    <div class="no-nearby pure-u-1-2">还没有nearBy帐号？</div>
-                    <div class="register pure-u-1-2">注册</div>
-                </div>
             </div>
 
         </div>
