--- a/client/templates/post-item/post-item.html
+++ b/client/templates/post-item/post-item.html
@@ -2,7 +2,7 @@
     <li class="item-activity">
         <div class="attribution">
             <span class="avatar"><img src="https://avatars3.githubusercontent.com/u/204768?v=2&amp;s=400" class="image-avatar"></span>
-            <span class="meta"><span class="author">Matt</span> sad: <a class="recipe" href="{{url}}">{{title}}</a> <span>{{domain}}</span><a href="{{pathFor 'postDetails'}}" class="location">&mdash;SoMA, San Francisco</a></span>
+            <span class="meta"><span class="author">{{author}}</span> <a class="recipe" href="{{url}}">{{title}}</a> <span>{{domain}}</span><a href="{{pathFor 'postDetails'}}" class="location">&mdash;SoMA, San Francisco</a></span>
         </div>
     </li>
 </template>
