--- a/client/templates/auth/setting/settings.html
+++ b/client/templates/auth/setting/settings.html
@@ -11,6 +11,7 @@
             </div>
             <div class="sign-panel pd15">
                 <form name="settingsForm">
+                   <input class="upload-avatar js-attach-image" id="uploadAvatar" type="file">
                     <div class="form-group">
                         <label class="control-label opt5">全名</label>
                         <input id="name" type="text" value="{{userName}}" name="name" class="form-control">
