--- a/client/templates/auth/register/register.html
+++ b/client/templates/auth/register/register.html
@@ -10,7 +10,7 @@
             </div>
             <div class="sign-panel pd15">
                 <form name="registerForm">
-                   <input class="upload-avatar" id="uploadAvatar" type="file">
+                   <input class="upload-avatar js-attach-image" id="uploadAvatar" type="file">
                     <div class="form-group">
                         <label class="control-label opt5">全名</label>
                         <input id="name" type="text" name="name" class="form-control">
