--- a/client/templates/auth/login/login.html
+++ b/client/templates/auth/login/login.html
@@ -3,7 +3,7 @@
         {{>nav title='用户登入' isback=true}}
         <div class="content-scrollable">
             <div class="bg-image login">
-                <h1 class="title">
+                <h1 class="title-login">
                     <img alt="Local Market" src="/images/loginBg.png">
                 </h1>
                 <span class="hours"></span>
