--- a/client/sass/utils/_form.scss
+++ b/client/sass/utils/_form.scss
@@ -37,9 +37,9 @@
         padding-left: 0;
         width: 100%;
         display: block;
-        font-size: 1.4rem;
+        font-size: 1rem;
         border: 0;
-        line-height: 1.5;
+        line-height: 1.2;
         border-bottom: 1px solid #ccc;
     }
     .input-group {
@@ -51,7 +51,8 @@
             right: 0;
             bottom: 0;
             font-size: 1rem;
-            line-height: 2.1;
+            line-height: 1.2;
+            @include border-radius(0);
         }
     }
 }
