--- a/client/templates/auth/register/register.html
+++ b/client/templates/auth/register/register.html
@@ -3,14 +3,13 @@
         {{>nav title='用户注册' isback=true}}
         <div class="content-scrollable">
             <div class="bg-image login">
-                <h1 class="title">
+                <h1 class="title-register">
                     <img alt="Local Market" src="/images/loginBg.png">
                 </h1>
                 <span class="hours"></span>
             </div>
             <div class="sign-panel pd15">
                 <form name="registerForm">
-                   <input class="upload-avatar js-attach-image" id="uploadAvatar" type="file">
                     <div class="form-group">
                         <label class="control-label opt5">全名</label>
                         <input id="name" type="text" name="name" class="form-control">
@@ -23,10 +22,10 @@
                         <label class="control-label opt5">密码</label>
                         <input id="password" type="password" class="form-control">
                     </div>
-                    <div class="form-group">
+                    <!--<div class="form-group">
                         <label class="control-label opt5">生日</label>
                         <input id="birthday" type="date" name="birthday" class="form-control">
-                    </div>
+                    </div>-->
                     <button class="btn btn-nearby btn-block" type="submit">注册</button>
                 </form>
             </div>
