--- a/client/templates/auth/setting/settings.html
+++ b/client/templates/auth/setting/settings.html
@@ -1,17 +1,21 @@
 <template name="settings">
-    <div class="page register">
+    <div class="page settings">
         {{#nav title='用户设置' isback=true}}
         <a href="#" class="nav-item"><span class="icon-logout">退出</span></a> {{/nav}}
         <div class="content-scrollable">
             <div class="bg-image setting">
-                <h1 class="title">
-                    <img alt="user-avatar" src="{{avatar}}">
+                <h1 class="title title-avatar">
+                   {{#each userAvatar}}
+                    <a class="avatar" href="#">
+                    <img src="{{this.url store='original' uploading='/images/uploading.gif' storing='/images/storing.gif'}}" alt="" class="thumbnail image-avatar" /></a>
+                    {{/each}}
+                    <ins><span class="icon-plus"></span></ins>
+                    <input class="upload-avatar js-attach-image" id="uploadAvatar" type="file">
                 </h1>
                 <span class="hours"></span>
             </div>
             <div class="sign-panel pd15">
                 <form name="settingsForm">
-                   <input class="upload-avatar js-attach-image" id="uploadAvatar" type="file">
                     <div class="form-group">
                         <label class="control-label opt5">全名</label>
                         <input id="name" type="text" value="{{userName}}" name="name" class="form-control">
@@ -24,10 +28,10 @@
                         <label class="control-label opt5">密码</label>
                         <input id="password" type="password" class="form-control">
                     </div>
-                    <div class="form-group">
+                    <!--<div class="form-group">
                         <label class="control-label opt5">生日</label>
                         <input id="birthday" type="date" name="birthday" class="form-control">
-                    </div>
+                    </div>-->
                     <button class="btn btn-nearby btn-block" type="submit">保存</button>
                 </form>
             </div>
