--- a/client/templates/wxApi/wxApi.html
+++ b/client/templates/wxApi/wxApi.html
@@ -5,7 +5,7 @@
         <div class="bg-image" style="background-image: url('/images/recipes/640x800/summer-apricots-honey-panna-cotta.jpg')"></div>
 
         <div class="attribution-title js-uncollapse">
-            <h1 class="title">{{access_token}}</h1>
+            <h1 class="title">{{checkItOut}}</h1>
             <div class="metadata-wrapper">
                 <p class="description">Juicy, fragrant, perfectly textured for a little fire action</p>
                 <span class="source">Tartelette</span>
