--- a/client/templates/oauth2/get-wx-user.html
+++ b/client/templates/oauth2/get-wx-user.html
@@ -1,3 +1,4 @@
 <template name="getWxUser">
-{{userinfo}}
+   <img src="{{userinfo.headimgurl}}">
+    {{userinfo.nickname}}{{userinfo.openid}}{{userinfo.sex}}{{userinfo.province}}{{userinfo.city}}{{userinfo.country}}
 </template>
