--- a/client/sass/utils/_bgImage.scss
+++ b/client/sass/utils/_bgImage.scss
@@ -4,6 +4,24 @@
     background-size: cover;
     overflow: hidden;
     position: relative;
+    .title {
+        bottom: auto;
+        @include inline-block;
+        height: auto;
+        left: auto;
+        position: absolute;
+        right: 50%;
+        top: 55%;
+        @include transform(translate3d(50%, -50%, 0px));
+        width: 80%;
+        padding: 0;
+        padding: 0;
+        text-align: center;
+        img {
+            display: block;
+            width: 100%;
+        }
+    }
     &.home {
         @include background-image(linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.0) 100%), url("/images/app/bg-home-640x655.jpg"));
     }
@@ -11,7 +29,12 @@
     .title-avatar {
         width: 50%;
     }
-    .title-avatar,.title-login,.title-register {
+    &.post-add {
+        height: 50%;
+    }
+    .title-avatar,
+    .title-login,
+    .title-register {
         bottom: auto;
         display: inline-block;
         height: auto;
