--- a/client/templates/auth/setting/settings.html
+++ b/client/templates/auth/setting/settings.html
@@ -10,7 +10,7 @@
                     <img src="{{this.url store='original' uploading='/images/uploading.gif' storing='/images/storing.gif'}}" alt="" class="thumbnail image-avatar" /></a>
                     {{/each}}
                     <ins><span class="icon-plus"></span></ins>
-                    <input class="upload-avatar js-attach-image" id="uploadAvatar" type="file">
+                    <input class="icon-plus upload-avatar js-attach-image" id="uploadAvatar" type="file">
                 </h1>
                 <span class="hours"></span>
             </div>
