--- a/client/sass/global.scss
+++ b/client/sass/global.scss
@@ -14,6 +14,7 @@
 @import "utils/menu";
 @import "utils/avatar";
 @import "utils/form";
+@import "utils/carousel";
 @import "components/postsList";
 @import "components/overlay";
 @import "components/notifications";
