--- a/client/templates/post/posts-list/posts-list.html
+++ b/client/templates/post/posts-list/posts-list.html
@@ -1,8 +1,7 @@
 <template name="postsList">
     <div class="page home">
         {{#nav title='Local Market' black=true}}
-        <a class="nav-item js-setting" href="{{pathFor 'settings'}}"><span class="icon-user"></span></a>
-        {{/nav}}
+        <a class="nav-item js-setting" href="{{pathFor 'settings'}}"><span class="icon-user"></span></a> {{/nav}}
         <div class="content-scrollable">
             <div class="bg-image home">
                 <h1 class="title-home">
@@ -12,12 +11,10 @@
             </div>
             <div class="posts">
                 <ul class="list-activities">
-                    {{#each posts}}
-                        {{> postItem}}
-                    {{/each}}
+                    {{#each posts}} {{> postItem}} {{/each}}
                 </ul>
             </div>
         </div>
-        {{#if currentUser}}<a class="btn btn-block btn-primary js-open" href="{{pathFor 'postAdd'}}">创建新帖子</a>{{/if}}
+        <a class="btn btn-block btn-primary js-add-post" href="{{pathFor 'postAdd'}}">创建新帖子</a>
     </div>
 </template>
