--- a/client/sass/utils/_carousel.scss
+++ b/client/sass/utils/_carousel.scss
@@ -39,11 +39,11 @@
     right: 1.5rem;
     bottom: 1.5rem;
 }
-#uploadIcon {
+
+#uploadIcon,
+#crossIcon {
     display: block;
     z-index: 9998;
-    right: 1.5rem;
-    bottom: 1.5rem;
     line-height: 4.0rem;
     height: 4.0rem;
     width: 4.0rem;
@@ -52,4 +52,15 @@
     color: #fff;
     font-size: 3.0rem;
     text-align: center;
+}
+
+#uploadIcon {
+    right: 1.5rem;
+    bottom: 1.5rem;
+}
+
+#crossIcon {
+    left: 1.5rem;
+    bottom: 1.5rem;
+    font-size: 2.2rem;
 }
