--- a/client/sass/utils/_carousel.scss
+++ b/client/sass/utils/_carousel.scss
@@ -1,9 +1,27 @@
 .owl-carousel {
     width: 100%;
     height: 100%;
+    .owl-wrapper-outer {
+        height: 100%;
+        .owl-wrapper {
+            height: 100%;
+            .owl-item {
+                height: 100%;
+                width: 100%;
+                .img-item {
+                    height: 100%;
+                    overflow: hidden;
+                    text-align: center;
+                    width: 100%;
+                    background-size: cover;
+                    background-position: center;
+                }
+            }
+        }
+    }
     img {
         display: block;
-        width: 100%;
+        width: auto;
         height: 100%;
     }
     .owl-controls {
