--- a/client/templates/post/gallery-item/gallery-item.html
+++ b/client/templates/post/gallery-item/gallery-item.html
@@ -1,5 +1,4 @@
 <template name="galleryItem">
-    <div class="img-item">
-        <img src="{{this.url store='original' uploading='/images/uploading.gif' storing='/images/storing.gif'}}" alt="" class="thumbnail image-avatar" />
+    <div class="img-item" style="background-image:url({{this.url store='original' uploading='/images/uploading.gif' storing='/images/storing.gif'}})">
     </div>
 </template>
