--- a/client/templates/oauth2/get-wx-user.html
+++ b/client/templates/oauth2/get-wx-user.html
@@ -1,4 +1,4 @@
 <template name="getWxUser">
-   <img src="{{userinfo.profile.headimgurl}}">
-    {{userinfo.profile.nickname}}{{userinfo.profile.openid}}{{userinfo.profile.sex}}{{userinfo.profile.province}}{{userinfo.profile.city}}{{userinfo.profile.country}}
+   <img src="{{userinfo.headimgurl}}">
+    {{userinfo.nickname}}{{userinfo.openid}}{{userinfo.sex}}{{userinfo.province}}{{userinfo.city}}{{userinfo.country}}
 </template>
