--- a/client/sass/global.scss
+++ b/client/sass/global.scss
@@ -19,6 +19,7 @@
 @import "components/overlay";
 @import "components/notifications";
 @import "components/wrapperMessage";
+@import "components/listUsers";
 @import "pages/home";
 @import "pages/postDetails";
 @import "pages/login";
